[package]
name = "rcat"
version = "2.0.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
license = "MIT/Apache-2.0"
description = "Utility to output file contents using Rust's byte slice notation."
repository = "https://github.com/frewsxcv/rcat"

[[bin]]
name = "rcat"
path = "main.rs"

[dependencies]
clap = "2.20"
