[package]
name = "rcat"
version = "2.0.4"
authors = ["Corey Farwell <coreyf@rwell.org>"]
license = "MIT/Apache-2.0"
description = "Concatenate and print files in a Rust byte slice compatible format."
repository = "https://github.com/frewsxcv/rcat"

[[bin]]
name = "rcat"
path = "main.rs"

[dependencies]
clap = "3.2"
